--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="EduRev - Revolutionizing the quality of education!">
     <title>EduRev - Revolutionizing the quality of education!</title>
     <link rel="shortcut icon" href="./images/icons/favicon.png">
     <link rel="apple-touch-icon" href="./images/icons/favicon.webp">
@@ -24,7 +25,7 @@
 <body>
     <!--#region - start of - Offcanvas fixed-top main navigation -->
     <nav class="navbar navbar-expand-xl fixed-top navbar-light bg-white" aria-label="Main navigation">
-        <div class="container-md container-xl nav-overflow-x-hidden py-2 py-xl-0">
+        <div class="container nav-overflow-x-hidden py-2 py-xl-0">
             <a class="navbar-brand py-0 me-0 d-inline-flex" href="#" aria-label="eduRev">
                 <svg class="logo-svg" viewBox="0 0 133 53" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.709 28.885C20.709 29.585 20.6624 30.215 20.569 30.775H6.39404C6.51071 32.175 7.00071 33.2717 7.86404 34.065C8.72738 34.8583 9.78904 35.255 11.049 35.255C12.869 35.255 14.164 34.4733 14.934 32.91H20.219C19.659 34.7767 18.5857 36.3167 16.999 37.53C15.4124 38.72 13.464 39.315 11.154 39.315C9.28738 39.315 7.60738 38.9067 6.11404 38.09C4.64404 37.25 3.48904 36.0717 2.64904 34.555C1.83238 33.0383 1.42404 31.2883 1.42404 29.305C1.42404 27.2983 1.83238 25.5367 2.64904 24.02C3.46571 22.5033 4.60904 21.3367 6.07904 20.52C7.54904 19.7033 9.24071 19.295 11.154 19.295C12.9974 19.295 14.6424 19.6917 16.089 20.485C17.559 21.2783 18.6907 22.41 19.484 23.88C20.3007 25.3267 20.709 26.995 20.709 28.885ZM15.634 27.485C15.6107 26.225 15.1557 25.2217 14.269 24.475C13.3824 23.705 12.2974 23.32 11.014 23.32C9.80071 23.32 8.77404 23.6933 7.93404 24.44C7.11738 25.1633 6.61571 26.1783 6.42904 27.485H15.634ZM23.0256 29.235C23.0256 27.275 23.4106 25.5367 24.1806 24.02C24.9739 22.5033 26.0473 21.3367 27.4006 20.52C28.7539 19.7033 30.2589 19.295 31.9156 19.295C33.1756 19.295 34.3773 19.575 35.5206 20.135C36.6639 20.6717 37.5739 21.395 38.2506 22.305V13.1H43.2206V39H38.2506V36.13C37.6439 37.0867 36.7923 37.8567 35.6956 38.44C34.5989 39.0233 33.3273 39.315 31.8806 39.315C30.2473 39.315 28.7539 38.895 27.4006 38.055C26.0473 37.215 24.9739 36.0367 24.1806 34.52C23.4106 32.98 23.0256 31.2183 23.0256 29.235ZM38.2856 29.305C38.2856 28.115 38.0523 27.1 37.5856 26.26C37.1189 25.3967 36.4889 24.7433 35.6956 24.3C34.9023 23.8333 34.0506 23.6 33.1406 23.6C32.2306 23.6 31.3906 23.8217 30.6206 24.265C29.8506 24.7083 29.2206 25.3617 28.7306 26.225C28.2639 27.065 28.0306 28.0683 28.0306 29.235C28.0306 30.4017 28.2639 31.4283 28.7306 32.315C29.2206 33.1783 29.8506 33.8433 30.6206 34.31C31.4139 34.7767 32.2539 35.01 33.1406 35.01C34.0506 35.01 34.9023 34.7883 35.6956 34.345C36.4889 33.8783 37.1189 33.225 37.5856 32.385C38.0523 31.5217 38.2856 30.495 38.2856 29.305ZM66.3113 19.61V39H61.3763V36.55C60.7463 37.39 59.918 38.055 58.8913 38.545C57.888 39.0117 56.7913 39.245 55.6013 39.245C54.0846 39.245 52.743 38.93 51.5763 38.3C50.4096 37.6467 49.488 36.7017 48.8113 35.465C48.158 34.205 47.8313 32.7117 47.8313 30.985V19.61H52.7313V30.285C52.7313 31.825 53.1163 33.015 53.8863 33.855C54.6563 34.6717 55.7063 35.08 57.0363 35.08C58.3896 35.08 59.4513 34.6717 60.2213 33.855C60.9913 33.015 61.3763 31.825 61.3763 30.285V19.61H66.3113Z" fill="#0B8A82" />
@@ -67,7 +68,7 @@
 
     <!--#region - start of - header carousel section -->
     <header class="header pt-5 mt-5 mb-3">
-        <div class="container-md container-xl">
+        <div class="container">
             <div id="header-carousel-captions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner rounded text-center text-white">
                     <div class="carousel-item active">
@@ -141,7 +142,7 @@
 
     <!--#region - start of - main section -->
     <main class="main pt-5 mt-5  mb-3">
-        <div class="container-md container-xl">
+        <div class="container">
             <div class="row justify-content-center">
 
                 <div class="col-md-11 col-xl-7 mb-5">
@@ -303,7 +304,7 @@
 
     <!--#region - start of - explore section -->
     <section class="explore pt-5 mt-5 mb-3">
-        <div class="container-md">
+        <div class="container">
             <div class="row g-0 bg-info bg-opacity-10 rounded align-items-md-center">
                 <figure class="col-md-6 m-0">
                     <picture class="d-flex">
@@ -342,7 +343,7 @@
 
     <!--#region - start of - newsletter section -->
     <section class="newsletter pt-5 mt-5 mb-3">
-        <div class="container-md">
+        <div class="container">
             <div class="row justify-content-center align-items-center text-center text-xl-start py-5 g-0 bg-info rounded">
                 <div class="col-md-9 col-xl-7 px-3">
                     <article class="text-white">
@@ -361,7 +362,7 @@
 
     <!--#region - start of - students section -->
     <section class="students pt-5 mt-5 mb-3">
-        <div class="container-md">
+        <div class="container">
             <div class="row">
                 <div class="col-12 text-center text-md-start mb-4">
                     <article class="col-md-9 col-xl-5 px-0">
@@ -437,7 +438,7 @@
 
     <!--#region - start of - feedback section -->
     <section class="feedback pt-5 mt-5 mb-3">
-        <div class="container-md">
+        <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-7 mb-4">
                     <article class="text-center">
@@ -780,7 +781,7 @@
 
     <!--#region - start of - faq section -->
     <section class="faq pt-5 mt-5 mb-3">
-        <div class="container-md">
+        <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-7 mb-4">
                     <article class="text-center">
@@ -801,9 +802,11 @@
                                 </button>
                             </h2>
                             <div id="faq-1" class="accordion-collapse collapse show" aria-labelledby="faq-h1">
-                                <p class="accordion-body px-0 px-xl-3 border-bottom-0 text-secondary">
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id culpa incidunt aut earum possimus sit, officiis saepe debitis consequuntur recusandae!
-                                </p>
+                                <ul class="accordion-body px-0 px-xl-3 border-bottom-0 text-secondary ms-4">
+                                    <li>Flexbox is designed for one-dimensional layouts, and Grid for two-dimensional layouts.</li>
+                                    <li>The approach of CSS Grid is the layout first, while the Flexbox approach is primarily the content.</li>
+                                    <li>The Flexbox layout is best suited to application components and small-scale layouts, while the Grid layout is designed for larger-scale layouts that are not linear in design.</li>
+                                </ul>
                             </div>
                         </article>
                         <!--#endregion - end of - single item -->
@@ -816,9 +819,7 @@
                                 </button>
                             </h2>
                             <div id="faq-2" class="accordion-collapse collapse" aria-labelledby="faq-h2">
-                                <p class="accordion-body px-0 px-xl-3 border-bottom-0 text-secondary">
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id culpa incidunt aut earum possimus sit, officiis saepe debitis consequuntur recusandae!
-                                </p>
+                                <p class="accordion-body px-0 px-xl-3 border-bottom-0 text-secondary ps-1">The main difference between Bootstrap and Tailwind is that Bootstrap pre-built components that provide a responsive UI (user interface) kit. On the other hand, Tailwind comes with predesigned widgets that facilitate web developers to design a website from scratch. </p>
                             </div>
                         </article>
                         <!--#endregion - end of - single item -->
@@ -830,9 +831,7 @@
                                 </button>
                             </h2>
                             <div id="faq-3" class="accordion-collapse collapse" aria-labelledby="faq-h3">
-                                <p class="accordion-body px-0 px-xl-3 border-bottom-0 text-secondary">
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id culpa incidunt aut earum possimus sit, officiis saepe debitis consequuntur recusandae!
-                                </p>
+                                <p class="accordion-body px-0 px-xl-3 border-bottom-0 text-secondary ps-1">Every element that can be displayed on a web page is comprised of one or more rectangular boxes. CSS box model typically describes how these rectangular boxes are laid out on a web page. These boxes can have different properties and can interact with each other in different ways, but every box has a content area and optional surrounding padding, border, and margin areas.</p>
                             </div>
                         </article>
                         <!--#endregion - end of - single item -->
@@ -845,9 +844,7 @@
                                 </button>
                             </h2>
                             <div id="faq-4" class="accordion-collapse collapse" aria-labelledby="faq-h4">
-                                <p class="accordion-body px-0 px-xl-3 border-bottom-0 text-secondary">
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id culpa incidunt aut earum possimus sit, officiis saepe debitis consequuntur recusandae!
-                                </p>
+                                <p class="accordion-body px-0 px-xl-3 border-bottom-0 text-secondary ps-1">The HTML semantics refers to the tags that provide meaning to an HTML page rather than just presentation. It makes HTML more comprehensible by better defining the different sections and layout of web pages. </p>
                             </div>
                         </article>
                         <!--#endregion - end of - single item -->
@@ -861,8 +858,8 @@
     <!--#endregion - end of - faq section -->
 
     <!--#region - start of - trust section -->
-    <section class="trust pt-5 mt-5 mb-3 d-none d-xl-block">
-        <div class="container-md">
+    <section class="trust py-5 my-5 d-none d-xl-block">
+        <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 mb-4">
                     <article class="text-center">
@@ -907,7 +904,7 @@
 
     <!--#region - start of - footer section -->
     <footer class="footer py-5 mt-5 bg-dark text-white text-center">
-        <div class="container-md">
+        <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-6 col-xl-4">
                     <svg class="logo-svg mb-3" viewBox="0 0 133 53" fill="none" xmlns="http://www.w3.org/2000/svg">
