--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </svg>
             </a>
             <!-- Register modal trigger button -->
-            <button type="button" class="btn btn-outline-info btn-lg fw-bold px-4 d-none d-md-inline-flex ms-md-auto me-md-4 me-xl-0 order-xl-last" data-bs-toggle="modal" data-bs-backdrop="false" data-bs-target="#register-modal">Register</button>
+            <button type="button" class="btn btn-outline-info btn-lg px-4 d-none d-md-inline-flex ms-md-auto me-md-4 me-xl-0 order-xl-last" data-bs-toggle="modal" data-bs-backdrop="false" data-bs-target="#register-modal">Register</button>
 
             <button class="navbar-toggler p-0 border-0" type="button" data-bs-toggle="offcanvas" aria-label="Toggle navigation" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
                 <span class="navbar-toggler-icon"></span>
@@ -68,7 +68,7 @@
 
     <!--#region - start of - header carousel section -->
     <header class="header pt-5 mt-5 mb-3">
-        <div class="container">
+        <div class="container pt-5">
             <div id="header-carousel-captions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner rounded text-center text-white">
                     <div class="carousel-item active">
@@ -84,7 +84,7 @@
                             <div class="col-12 col-md-9 col-xl-6 align-self-center">
                                 <h2 class="mb-3 fs-1 px-md-5">Get Started Digital Learning</h2>
                                 <p class="pb-md-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                                <button type="button" class="btn btn-info text-white px-4 align-self-center fs-4">Get Started</button>
+                                <a href="#" class="btn btn-info text-white px-4 align-self-center fs-4">Get Started</a>
                             </div>
                         </div>
 
@@ -103,7 +103,7 @@
                             <div class="col-12 col-md-9 col-xl-6 align-self-center">
                                 <h2 class="mb-3 fs-1 px-md-5">Get Started Digital Learning</h2>
                                 <p class="pb-md-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                                <button type="button" class="btn btn-info text-white px-4 align-self-center fs-4">Get Started</button>
+                                <a href="#" class="btn btn-info text-white px-4 align-self-center fs-4">Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                             <div class="col-12 col-md-9 col-xl-6 align-self-center">
                                 <h2 class="mb-3 fs-1 px-md-5">Get Started Digital Learning</h2>
                                 <p class="pb-md-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                                <button type="button" class="btn btn-info text-white px-4 align-self-center fs-4">Get Started</button>
+                                <a href="#" class="btn btn-info text-white px-4 align-self-center fs-4">Get Started</a>
                             </div>
                         </div>
 
@@ -293,8 +293,7 @@
                 <!--#endregion - end of - only shown in xl devices -->
 
                 <div class="col-12 text-center mb-3 mt-5">
-                    <button type="button" class="btn btn-info text-white px-4 fs-4 d-xl-none">View All</button>
-                    <button type="button" class="btn btn-info text-white px-4 fs-4 d-none d-xl-inline-flex">See More Courses</button>
+                    <a href="#" class="btn btn-info text-white px-4 fs-4 d-inline-flex">See More Courses</a>
                 </div>
 
             </div>
@@ -333,7 +332,7 @@
                                 <p class="mb-md-1 text-secondary">Rating & Review</p>
                             </div>
                         </div>
-                        <button type="button" class="btn btn-info text-white fs-4 px-4">Read more</button>
+                        <a href="#" class="btn btn-info text-white fs-4 px-4">Read more</a>
                     </article>
                 </div>
             </div>
@@ -372,7 +371,7 @@
                 </div>
 
                 <!--#region - start of - single student -->
-                <div class="col-md-6 col-xl-3">
+                <div class="col-md-6 col-xl-3 d-none d-md-block">
                     <div class="card border-0 mb-3">
                         <picture class="d-flex">
                             <source srcset="./images/student/student-1.webp">
@@ -429,7 +428,7 @@
                 </div>
                 <!--#endregion - end of - single student -->
                 <div class="col-12 text-center mt-4 mt-xl-5">
-                    <button type="button" class="btn btn-info text-white px-4 fs-4 d-inline-flex d-md-none d-xl-inline-flex">View All</button>
+                    <a href="#" class="btn btn-info text-white px-4 fs-4 d-inline-flex d-md-none d-xl-inline-flex">View All</a>
                 </div>
             </div>
         </div>
@@ -443,13 +442,13 @@
                 <div class="col-xl-7 mb-4">
                     <article class="text-center">
                         <h2 class="fs-1 mb-3">Some Students Feedback</h2>
-                        <p class="text-secondary px-xl-5 mx-xl-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <p class="text-secondary px-md-4 px-xl-5 mx-xl-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                     </article>
                 </div>
             </div>
 
             <!--#region - start of - feedback carousel -->
-            <div id="feedback-carousel" class="carousel slide" data-bs-ride="false">
+            <div id="feedback-carousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <!--#region - start of - single item -->
@@ -773,7 +772,7 @@
             <!--#endregion - end of - feedback carousel -->
 
             <p class="text-center mb-0">
-                <button type="button" class="btn btn-info text-white px-4 fs-4 d-xl-none">View All</button>
+                <a href="#" class="btn btn-info text-white px-4 fs-4 d-xl-none">View All</a>
             </p>
         </div>
     </section>
